--- a/html/index.html
+++ b/html/index.html
@@ -6,9 +6,13 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<script src="/assets/socket.io.js"></script>
 	<script src="/assets/apiConnector.js"></script>
-	<title>Document</title>
+	<script src="assets/js/jquery-3.3.1.min.js"></script>
+	<link rel="stylesheet" href="assets/css/uikit.min.css" />
+	<script src="assets/js/uikit.min.js"></script>
+	<script src="assets/js/uikit-icons.min.js"></script>
+
 </head>
 <body>
-	<h1>Hello le world</h1>
+Welcome
 </body>
 </html>
