[Server] API Socket OK Client and Admin OK

--- a/html/admin.html
+++ b/html/admin.html
@@ -23,10 +23,16 @@
 			<hr class="uk-divider-icon uk-width-1-2 uk-align-center">
 		</div>
 		<div uk-grid>
+			<div class="uk-card uk-card-default uk-align-center uk-width-1-2">
+				<div id="player"></div>
+			</div>
+		</div>
+		<div uk-grid>
 			<div class="uk-card uk-card-default uk-align-center uk-width-1-2" id="songs">
 
 			</div>
 		</div>
+	
 		<div uk-grid>
 			<div class="uk-align-center">
 			<p class="uk-text-small">
@@ -52,6 +58,6 @@
 		</form>
 	</div>
 </div>
-	<script src="/assets/apiConnector.js"></script>
+	<script src="/assets/apiConnectorADM.js"></script>
 </div>
 </html>
