--- a/html/admin.html
+++ b/html/admin.html
@@ -26,12 +26,22 @@
 			<div class="uk-card uk-card-default uk-align-center uk-width-1-2">
 				<div id="player"></div>
 			</div>
+			<br>
 		</div>
+
+		<div uk-grid>
+				<div class="uk-card uk-card-default uk-align-center uk-width-1-2" style="padding: 15px">
+					<button class="uk-button uk-button-danger" id="restart">Redémarrer</button>
+					<button class="uk-button uk-button-primary" id="next">Next</button>
+				</div>
+		</div>
+
 		<div uk-grid>
 			<div class="uk-card uk-card-default uk-align-center uk-width-1-2" id="songs">
-
+				
 			</div>
 		</div>
+		
 	
 		<div uk-grid>
 			<div class="uk-align-center">
