[Server] Mixeur Admin OK

--- a/html/admin.html
+++ b/html/admin.html
@@ -33,6 +33,9 @@
 				<div class="uk-card uk-card-default uk-align-center uk-width-1-2" style="padding: 15px">
 					<button class="uk-button uk-button-danger" id="restart">Redémarrer</button>
 					<button class="uk-button uk-button-primary" id="next">Next</button>
+					<button class="uk-button uk-button-secondary" id="play">Play</button>
+					<button class="uk-button uk-button-secondary" id="pause">Stop</button>
+					<input class="uk-range" type="range" value="100" min="0" id="volume-input" max="100" step="1">
 				</div>
 		</div>
 
@@ -69,5 +72,6 @@
 	</div>
 </div>
 	<script src="/assets/apiConnectorADM.js"></script>
+	<script src="/assets/js/refresh.js"></script>
 </div>
 </html>
