--- a/html/index.html
+++ b/html/index.html
@@ -53,5 +53,6 @@
 	</div>
 </div>
 	<script src="/assets/apiConnector.js"></script>
+	<script src="/assets/js/refresh.js"></script>
 </div>
 </html>
