Several Bug Fixed

--- a/html/admin.html
+++ b/html/admin.html
@@ -30,6 +30,8 @@
 					<button class="uk-button uk-button-secondary" id="play">Play</button>
 					<button class="uk-button uk-button-secondary" id="pause">Stop</button>
 					<input class="uk-range" type="range" value="100" min="0" id="volume-input" max="100" step="1">
+					<p>Change the TV Title</p>
+					<input class="uk-input" type="text"id="title-input">
 				</div>
 		</div>		
 	
@@ -59,7 +61,7 @@
 	</div>
 </div>
 	<script>
-		ROLE = 1;
+		ROLE = 2;
 	</script>
 	<script src="/assets/api.js"></script>
 	<script src="/assets/js/refresh.js"></script>
