--- a/html/hub.html
+++ b/html/hub.html
@@ -31,6 +31,11 @@
 			<h2 style="color: white; font-size: 5em" class="uk-text-capitalize" id="title"></h2>
 		</div>
 	</div>
+	<div uk-grid>
+		<div class="uk-align-center uk-width-1-2 uk-text-center">
+			<p>http://192.168.0.180/ to add a music</p>
+		</div>
+	</div>
 	
 
 </body>
